# Yale_Alumni

./: README.md  Yale_Alumni.code-workspace  main.py  pyproject.toml
agents/background_finder_agent/: __init__.py  agent.py
app/: main.py
app/agents/: agent_factory.py
app/agents/alumni_researcher_agent/: __init__.py  agent.py
app/agents/alumni_researcher_agent/subagents/: __init__.py
app/agents/alumni_researcher_agent/subagents/background_information_agent/: __init__.py  agent.py  prompts.py
app/agents/alumni_researcher_agent/subagents/formatter_agent/: __init__.py  agent.py  prompts.py
app/agents/alumni_researcher_agent/subagents/social_media_agent/: __init__.py  agent.py  callbacks.py  prompts.py  tools.py
app/agents/background_finder_agent/: __init__.py  agent.py
app/agents/background_finder_agent/subagents/: __init__.py
app/agents/background_finder_agent/subagents/formatter_agent/: __init__.py  agent.py  prompts.py
app/agents/background_finder_agent/subagents/search_agent/: agent.py  prompts.py
app/configs/: app.py  database.py  llms.py
app/services/: __init__.py  adk_service.py
app/utils/: agent_utils.py  cmd_utils.py  search_utils.py
data/: alumni_results.csv  database.db  residents_base_info.csv
utils/: agent_utils.py
