[project]
name = "yale-alumni"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-adk>=1.18.0",
    "ddgs>=0.0.1",
    "requests>=2.31.0",
    "pandas>=2.3.3",
    "tqdm>=4.67.1",
    "playwright>=1.40.0",
]
